@@ -47,8 +47,9 @@ bool RPackageCache::open(OpProgress &progress)
     //pkgSourceList list;
     assert(_list!=NULL);
     if (!_list->ReadMainList())
-       return _error->Error(_("The list of sources could not be read."));
-    
+       return _error->Error(_("The list of sources could not be read.\n\
+Go to the repository dialog to correct the problem."));
+
     pkgMakeStatusCache(*_list, progress);
 
     if (_error->PendingError())
